Modify sub-menu placement to prevent display off-screen
Shift sub-menus left relative to their parent
Lighten 3rd tier menu items' background color to distinguish visually
Decrease width of 3rd tier menu items

Note: This may have to be adjusted if a menu item on the right side of the screen has 2nd and 3rd-tier menu children

--- a/custom.css
+++ b/custom.css
@@ -226,6 +226,9 @@ div.gform_wrapper .gform_footer input[type="submit"]{
   color: #fff;
   background-color: transparent;
 }
+.genesis-nav-menu .menu-item:hover {
+  position: relative;
+}
 .genesis-nav-menu .menu-item:focus > .sub-menu {
   left: auto;
   opacity: 1;
@@ -247,6 +250,13 @@ div.gform_wrapper .gform_footer input[type="submit"]{
 }
 .genesis-nav-menu .sub-menu a:hover {
   background-color: #0c1640;
+}
+.genesis-nav-menu .sub-menu .sub-menu {
+  width: 112px;
+}
+.genesis-nav-menu .sub-menu .sub-menu a {
+  background-color: #15204D;
+  width: 112px;
 }
 .genesis-nav-menu{
   font-size: 1.4rem;
@@ -693,6 +703,15 @@ body.agency-pro-orange a{
   .agency-pro-home .content .featured-content .entry-header{
     clear: both;
   }
+  .genesis-nav-menu .menu-item:focus > .sub-menu {
+    left: -3em;
+  }
+  .genesis-nav-menu .menu-item:hover > .sub-menu {
+    left: -3em;
+  }
+  .genesis-nav-menu .menu-item:active > .sub-menu {
+    left: -3em;
+  }
   .home-top .widget-title{
     font-size: 48px;
     font-size: 4.8rem;
@@ -725,4 +744,3 @@ body.agency-pro-orange a{
     padding-top: 0px;
   }
 }
-
